@@ -1,1 +1,1 @@
-OPENBSM_1_2alpha2
+OPENBSM_1_2_alpha3
